--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <nav>
   <button routerLink="/create-user">Create user</button>
+  <button routerLink="/list-user">List user</button>
 </nav>
 <div style="text-align:center">
   <h1>
