wip(): create, list user

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,6 @@
+User
+<nav>
+  <button routerLink="/create-user">Create user</button>
+  <button routerLink="/list-user">List user</button>
+</nav>
 <router-outlet></router-outlet>
