--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,7 @@
-User
-<nav>
-  <button routerLink="/create-user">Create user</button>
-  <button routerLink="/list-user">List user</button>
-</nav>
-<router-outlet></router-outlet>
+<div class="w50">
+  <app-create-user></app-create-user>
+</div>
+
+<div class="w50">
+  <app-list-user></app-list-user>
+</div>
